# Zubr

./: LICENSE.md  README.md  index.html  package.json  tsconfig.node.json  vite.config.ts
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml
.github/issue_template/: bug_report.yml  config.yml
.github/workflows/: release.yml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: theme-provider.tsx  title-bar.tsx
src/components/db/: ChangesDialog.tsx  ConnectionForm.tsx  ConnectionManager.tsx  DataCell.tsx  DbSidebar.tsx  FilterBuilder.tsx  TableDataView.tsx  ThemeToggleButton.tsx  VectorVisualization.tsx
src/components/ui/: calendar.tsx  checkbox.tsx  command.tsx  dropdown-menu.tsx  select.tsx  sheet.tsx  sidebar.tsx
src/routes/: __root.tsx  index.tsx
