[package]
name = "zubr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zubr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.4", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.9", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
pgvector = { version = "0.4", features = ["postgres", "serde"] }
tokio-postgres-rustls = "0.11.0"
rustls = "0.22.4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
tauri-plugin-opener = "2.0.0-rc.3"
tauri-plugin-os = "2"
tauri-plugin-store = "2.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

